# MyLangchainTranning

./: 02-ChatMachine.py  03-ChatStream.py  04-ChatWithDocument.py  05-RetrieverAndModels.py  README.md  Siliconflow-Demo.py  aliyunbailian.py  client.py  main.py  pyproject.toml  tavilyDemo.py
database_index_migrate/: main.py
langchain-demo/: 01-basic-agent.md  01-basic-agent.py  02-basic-agent-respose结果解析.md  02-basic-agent-代码解释.md  02-basic-agent.py
my-langchain-demo/: read_file_demo.py
my-mcp/: config.py  mcp-server-fast-mcp.py  mcp_client.py  mcp_server.py
myOllama/: AI-MCP.py  AI-Machine-Operate-Excute-Tools-Langchain.py  AI-Machine-Operate-Excute-Tools.py  AI-Machine-Operate-Tools.py  Answer-Auto-Http.py  Answer-Auto-Network-Search-Function-Tools.py  Answer-Auto-Network-Search-Manual.py  Code-AI.py  Full-Ask-Answer.py  MCP-Demo.py  PydanticAI-Skills.py  multipleAsk.py  simpleAnswer.py
