[project]
name = "mylangchaintranning"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "openai>=2.31.0",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "tavily-python>=0.7.23",
]
