[project]
name = "mylangchaintranning"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "mcp>=1.27.0",
    "openai>=2.31.0",
    "pydantic-ai>=1.84.1",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "tavily-python>=0.7.23",
]
